touchups on FAQ exercise

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -22,6 +22,8 @@
 </head>
 <body>
 <img src="images/parks-and-rec.jpeg" alt="">
+<p style="text-align: center; margin-top: -80px; font-family: 'Courgette', cursive; font-size: larger; font-style: oblique;">National</p>
+<br>
 <header><h1><em>Frequently Asked Questions</em></h1></header>
 
 
@@ -73,7 +75,7 @@
     </dd>
 </dl>
 <br>
-<button type="button">Click for Answers</button>
+<button type="button" class="secret">Click for Answers</button>
 <br>
 
 <h3>Yosemite National Park</h3>
@@ -112,7 +114,7 @@
 
     $('dd').addClass('invisible');
 
-    $('p').click(function (event) {
+    $('.secret').click(function (event) {
         $('dd').toggleClass('invisible');
 
     });
