--- a/good-practice.html
+++ b/good-practice.html
@@ -21,8 +21,21 @@
 //             }
 //         }
 //     }
+// }
+
+
+
+
+function addUp(num) {
+
+    var total = 0;
+    for (var i = 1; i <= num; i++) {
+        total = total + i;
+    }
+    return total;
 }
 
+console.log(addUp(4));
 
 function compareArrays(array2, array1){
     for(var i = 0; i <array1.length; i++){
@@ -44,11 +57,11 @@ function compareArrays(array2, array1){
 // tripleUp([1, 2, 3]) → true
 // tripleUp([1, 2, 4]) → false
 
-function tripleUp(nums){
-    for (var i = 0; i < nums.length; i++){
-
-    }
-}
+// function tripleUp(nums){
+//     for (var i = 0; i < nums.length; i++){
+//
+//     }
+// }
 
 
 // Write a function named padArray. It should accept 3 arguments:
@@ -58,21 +71,21 @@ function tripleUp(nums){
 // and return the array. If the length of the passed array is greater than or equal to the
 // passed length, the function should just return the array.
 
-function padArray(inArray, inLength, inElement){
-    var newArray = [];
-
-    if(inArray.length >= inLength){
-        newArray = inArray;
-    }else{
-
-        for (var i = 0; i <= (inLength - inArray.length) + 1; i++) {
-            inArray.push(inElement);
-        }
-        newArray = inArray;
-    }
-
-    return newArray;
-}
+// function padArray(inArray, inLength, inElement){
+//     var newArray = [];
+//
+//     if(inArray.length >= inLength){
+//         newArray = inArray;
+//     }else{
+//
+//         for (var i = 0; i <= (inLength - inArray.length) + 1; i++) {
+//             inArray.push(inElement);
+//         }
+//         newArray = inArray;
+//     }
+//
+//     return newArray;
+// }
 
 
 </script>
