--- a/good-practice.html
+++ b/good-practice.html
@@ -23,33 +23,41 @@
 //     }
 // }
 
+var numsArray = [1, 3, 63, 13, 17];
+
+function numOrder(arr){
+    return numsArray.sort(function (a,b) {
+        return a - b;
+    })
+};
+
+console.log(numOrder(numsArray));
 
 
-
-function addUp(num) {
-
-    var total = 0;
-    for (var i = 1; i <= num; i++) {
-        total = total + i;
-    }
-    return total;
-}
-
-console.log(addUp(4));
-
-function compareArrays(array2, array1){
-    for(var i = 0; i <array1.length; i++){
-        for(var o = 0; o <array2.length; o++){
-            if(array1[i] === array2[o]){
-                break;
-            }
-            if(array2[o] === array2[array2.length - 1]){
-                return false;
-            }
-        }
-    }
-    return true;
-}
+// function addUp(num) {
+//
+//     var total = 0;
+//     for (var i = 1; i <= num; i++) {
+//         total = total + i;
+//     }
+//     return total;
+// }
+//
+// console.log(addUp(4));
+//
+// function compareArrays(array2, array1){
+//     for(var i = 0; i <array1.length; i++){
+//         for(var o = 0; o <array2.length; o++){
+//             if(array1[i] === array2[o]){
+//                 break;
+//             }
+//             if(array2[o] === array2[array2.length - 1]){
+//                 return false;
+//             }
+//         }
+//     }
+//     return true;
+// }
 
 // Return true if the array contains, somewhere, three increasing adjacent numbers like .... 4, 5, 6, ... or 23, 24, 25.
 
