--- a/ajax-store.html
+++ b/ajax-store.html
@@ -18,7 +18,7 @@
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
-
+<script src="js/jquery-2.2.4.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
@@ -26,10 +26,49 @@
     "use strict";
     // TODO: Create an ajax GET request for /data/inventory.json
 
+    var myTools = $.ajax("data/inventory.json");
+
+   myTools.done(function (data) {
+       console.log(data);
+   });
+
+
     // TODO: Take the data from inventory.json and append it to the products table
     //       HINT: Your data should come back as a JSON object; use console.log() to inspect
     //             its contents and fields
     //       HINT: You will want to target #insertProducts for your new HTML elements
+
+    myTools.done(function (data) {
+        console.log(data);
+
+        //iterate over books.json (array of objects)
+        $.each(data, function (index,tool) {
+
+            var tools = "<tr>";
+            tools += "<td>";
+            tools += tool.title;
+            tools += "</td>";
+            tools += "<td>";
+            tools += tool.quantity;
+            tools += "</td>";
+            tools += "<td>";
+            tools += tool.price;
+            tools += "</td>";
+            tools += "<td>";
+            tools += tool.categories;
+            tools += "</td>";
+            tools += "</tr>";
+
+
+
+
+            //log each book title
+            console.log(tool.title);
+
+            $('#insertProducts').append(tools);
+        })
+    });
+
 })();
 </script>
 
