--- a/ajax-store.html
+++ b/ajax-store.html
@@ -6,31 +6,31 @@
 <body>
 
 <h1>My Tool Store</h1>
-
-<table id="products">
-    <thead>
+<div id="main">
+    <table id="products">
+        <thead>
         <tr>
             <th>Title</th>
             <th>Quantity</th>
             <th>Price</th>
             <th>Categories</th>
         </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
+        </thead>
+        <tbody id="insertProducts"></tbody>
+    </table>
+</div>
+<button id="reload">reload</button>
 <script src="js/jquery-2.2.4.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+<script src="bootstrap/js/bootstrap.js"></script>
 <script>
 (function() {
     "use strict";
     // TODO: Create an ajax GET request for /data/inventory.json
 
-    var myTools = $.ajax("data/inventory.json");
+    function generateTools() {
 
-   myTools.done(function (data) {
-       console.log(data);
-   });
+    var myTools = $.ajax("data/inventory.json");
 
 
     // TODO: Take the data from inventory.json and append it to the products table
@@ -42,7 +42,7 @@
         console.log(data);
 
         //iterate over books.json (array of objects)
-        $.each(data, function (index,tool) {
+        $.each(data, function (index, tool) {
 
             var tools = "<tr>";
             tools += "<td>";
@@ -60,6 +60,9 @@
             tools += "</tr>";
 
 
+            // tools += tool.quantity;
+            // tools += tool.price;
+            // tools += tool.categories;
 
 
             //log each book title
@@ -68,8 +71,18 @@
             $('#insertProducts').append(tools);
         })
     });
+}
+
+    generateTools();
+
+
+    $('#reload').click(function () {
+        location.reload(true);
+    });
 
 })();
+
+
 </script>
 
 </body>
