--- a/ajax-store.html
+++ b/ajax-store.html
@@ -22,7 +22,6 @@
 <button id="reload">reload</button>
 <script src="js/jquery-2.2.4.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="bootstrap/js/bootstrap.js"></script>
 <script>
 (function() {
     "use strict";
@@ -41,7 +40,7 @@
     myTools.done(function (data) {
         console.log(data);
 
-        //iterate over books.json (array of objects)
+        //iterate over inventory.json (array of objects)
         $.each(data, function (index, tool) {
 
             var tools = "<tr>";
@@ -58,11 +57,6 @@
             tools += tool.categories;
             tools += "</td>";
             tools += "</tr>";
-
-
-            // tools += tool.quantity;
-            // tools += tool.price;
-            // tools += tool.categories;
 
 
             //log each book title
