morning warmup and ajax progress

--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+<h1 style="text-align: center">My Tool Store</h1>
 <div id="main">
-    <table id="products">
-        <thead>
+    <table id="products" class="table">
+        <thead class="thead-dark">
         <tr>
             <th>Title</th>
             <th>Quantity</th>
