ajax store completed

--- a/ajax-store.html
+++ b/ajax-store.html
@@ -8,7 +8,7 @@
 
 <h1 style="text-align: center" class="btn-primary">My Tool Store</h1>
 <div id="main" >
-    <table id="products" class="table table-bordered table-dark">
+    <table id="products" class="table table-bordered table-primary">
         <thead class="thead-dark">
         <tr>
             <th>Title</th>
