morning warmup 6 Nov

--- a/weather_map.html
+++ b/weather_map.html
@@ -3,54 +3,211 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Map</title>
-<!--    mapbox CSS-->
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+<!--    bootstrap cdn-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!--    mapbox CS-->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
 <!--    custom CSS-->
     <link rel="stylesheet" href="css/weather-map.css">
+    <style>
+        .card {
+            height: 250px;
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
+<h1 class="text-center">Weather Application</h1>
+
+
+
+<ul style="display: flex; list-style-type: none" id="card-list">
+    <li>
+        <h3>Today's Weather</h3>
+        <div class="card" id="todayWeather"></div>
+    </li>
+
+    <li>
+        <h3>Tomorrow's Weather</h3>
+        <div class="card" id="tmrwWeather"></div>
+    </li>
+
+    <li>
+        <h3>Day After Tomorrow's Weather</h3>
+        <div class="card" id="dayAfterWeather"></div>
+    </li>
+</ul>
 <div id="map">
 
 </div>
 
-
-
-
-
+<!--jquery-->
+<!--materialize-->
+<!--mapbox api-->
+<!--mapbox geocoder-->
+<!--keys js-->
+<!--custom js-->
 
 
 <script src="js/jquery-2.2.4.js"></script>
-<!--mapbox JS-->
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-<!--Materialize script goes here if you want-->
+<!--materialize could go here if you want-->
 <script src="js/mapbox-geocoder-utils.js"></script>
 <script src="js/keys.js"></script>
-<!--Additional stuff-->
 <script>
+
     var darkSky = $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/" + darkSkyKey + "/29.4241,-98.4936");
+    //
+    // var date = function (input) {
+    //     return new Date(input * 1000);
+    // };
+
+    // darkSky.done(function (data) {
+    //     //logs TODAY's weather info
+    //     var todayTempHi = data.daily.data[0].temperatureHigh;
+    //     var todayTempLo = data.daily.data[0].temperatureLow;
+    //     console.log("the high temperature for today is " + todayTempHi + " and the low is " + todayTempLo + ".");
+    //     // console.log(date(data.daily.data[0].time));
+    //     console.log(data.daily.data[0]);
+    //     // console.log(todayTempLo);
+    // });
 
 
-    darkSky.done(function(data){
-        console.log(data.daily.data[0]);
-        var todayTempHigh = data.daily.data[0].temperatureHigh;
-        var todayTempLow = data.daily.data[0].temperatureLow;
-        console.log(todayTempHigh);
-        console.log(todayTempLow);
+
+    darkSky.done(function (data) {
+        var todaySummary = data.daily.data[0].summary;
+        var todayTempHi = data.daily.data[0].temperatureHigh;
+        var todayTempLo = data.daily.data[0].temperatureLow;
+        var todayhumidity = data.daily.data[0].humidity;
+        var todayWind = data.daily.data[0].windSpeed;
+        var todayPressure = data.daily.data[0].pressure;
+
+        var tmrwSummary = data.daily.data[1].summary;
+        var tmrwTempHi = data.daily.data[1].temperatureHigh;
+        var tmrwTempLo = data.daily.data[1].temperatureLow;
+        var tmrwHumidity = data.daily.data[1].humidity;
+        var tmrwWind = data.daily.data[1].windSpeed;
+        var tmrwPressure = data.daily.data[1].pressure;
+
+        var dayAfterSummary = data.daily.data[2].summary;
+        var dayAfterTempHi = data.daily.data[2].temperatureHigh;
+        var dayAfterTempLo = data.daily.data[2].temperatureLow;
+        var dayAfterHumidity = data.daily.data[2].humidity;
+        var dayAfterWind = data.daily.data[2].windSpeed;
+        var dayAfterPressure = data.daily.data[2].pressure;
+
+        var weatherCard = "";
+        weatherCard += ("<h5>" + todaySummary + "</h5>");
+        weatherCard += ("<h5> Temp: Lo: " + todayTempLo + "/ Hi: " + todayTempHi + "</h5>");
+        weatherCard += ("<h5> Humidity: " + todayhumidity + "</h5>");
+        weatherCard += ("<h5>Wind Speed: " + todayWind + "</h5>");
+        weatherCard += ("<h5> Pressure: " + todayPressure + "</h5>");
+        $("#todayWeather").append(weatherCard);
+
+        var weatherCard2 = "";
+        weatherCard2 += ("<h5>" + tmrwSummary + "</h5>");
+        weatherCard2 += ("<h5> Temp: Lo: " + tmrwTempLo + "/ Hi: " + tmrwTempHi + "</h5>");
+        weatherCard2 += ("<h5> Humidity: " + tmrwHumidity + "</h5>");
+        weatherCard2 += ("<h5>Wind Speed: " + tmrwWind + "</h5>");
+        weatherCard2 += ("<h5> Pressure: " + tmrwPressure + "</h5>");
+        $("#tmrwWeather").append(weatherCard2);
+
+        var weatherCard3 = "";
+        weatherCard3 += ("<h5>" + dayAfterSummary + "</h5>");
+        weatherCard3 += ("<h5> Temp: Lo: " + dayAfterTempLo + "/ Hi: " + dayAfterTempHi + "</h5>");
+        weatherCard3 += ("<h5> Humidity: " + dayAfterHumidity + "</h5>");
+        weatherCard3 += ("<h5>Wind Speed: " + dayAfterWind + "</h5>");
+        weatherCard3 += ("<h5> Pressure: " + dayAfterPressure + "</h5>");
+        $("#dayAfterWeather").append(weatherCard3);
+
     });
+
+    // darkSky.done(function(data) {
+    //     var todayWeather = "<h4>
+    // });
 
     mapboxgl.accessToken = mapboxToken;
     var map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/mapbox/satellite-v9',
-        zoom: 15,
-        center: [-98.485352, 29.423618]
+        style: 'mapbox://styles/mapbox/streets-v8',
+        zoom: 10,
+        center: [-98.4936, 29.4241]
         // pitch: 45
     });
 
+    var markerOptions = {
+        color: "#27468f",
+        draggable: true
+    };
 
-
+    var marker = new mapboxgl.Marker(markerOptions)
+        .setLngLat([-98.4936, 29.4241])
+        .addTo(map);
 
 
 </script>
 </body>
 </html>
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Weather Map</title>-->
+<!--&lt;!&ndash;    mapbox CSS&ndash;&gt;-->
+<!--    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />-->
+<!--&lt;!&ndash;    custom CSS&ndash;&gt;-->
+<!--    <link rel="stylesheet" href="css/weather-map.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--<div id="map">-->
+
+<!--</div>-->
+
+
+
+
+
+
+
+<!--<script src="js/jquery-2.2.4.js"></script>-->
+<!--&lt;!&ndash;mapbox JS&ndash;&gt;-->
+<!--<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>-->
+<!--&lt;!&ndash;Materialize script goes here if you want&ndash;&gt;-->
+<!--<script src="js/mapbox-geocoder-utils.js"></script>-->
+<!--<script src="js/keys.js"></script>-->
+<!--&lt;!&ndash;Additional stuff&ndash;&gt;-->
+<!--<script>-->
+<!--    var darkSky = $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/" + darkSkyKey + "/29.4241,-98.4936");-->
+
+
+<!--    darkSky.done(function(data){-->
+<!--        console.log(data.daily.data[0]);-->
+<!--        var todayTempHigh = data.daily.data[0].temperatureHigh;-->
+<!--        var todayTempLow = data.daily.data[0].temperatureLow;-->
+<!--        console.log(todayTempHigh);-->
+<!--        console.log(todayTempLow);-->
+<!--    });-->
+
+<!--    mapboxgl.accessToken = mapboxToken;-->
+<!--    var map = new mapboxgl.Map({-->
+<!--        container: 'map',-->
+<!--        style: 'mapbox://styles/mapbox/streets-v9',-->
+<!--        zoom: 10,-->
+<!--        center: [-98.4936, 29.4241]-->
+<!--        // pitch: 45-->
+<!--    });-->
+
+
+
+
+
+
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
