--- a/weather_map.html
+++ b/weather_map.html
@@ -27,21 +27,21 @@
         <div class="card-header" style="background-color: #0fb784">
         <h4>Today's Weather</h4>
         </div>
-        <div class="card" id="todayWeather"></div>
+        <div class="card" id="todayWeather" style="background-color: #5FBFD8"></div>
     </li>
 
     <li>
         <div class="card-header" style="background-color: #0fb784">
         <h4>Tomorrow's Weather</h4>
         </div>
-        <div class="card" id="tmrwWeather" style="background-image: url('images/weather-div.png'); background-size: cover; background-repeat: no-repeat"></div>
+        <div class="card" id="tmrwWeather" style="background-color: #5FBFD8"></div>
     </li>
 
     <li>
         <div class="card-header" style="background-color: #0fb784">
         <h4>Day After Tomorrow</h4>
         </div>
-        <div class="card" id="dayAfterWeather" style="background-image: url('images/weather-div.png'); background-size: cover; background-repeat: no-repeat"></div>
+        <div class="card" id="dayAfterWeather" style="background-color: #5FBFD8"></div>
     </li>
 </ul>
 </div>
@@ -86,6 +86,8 @@
 
 
 
+
+
     darkSky.done(function (data) {
         var todaySummary = data.daily.data[0].summary;
         var todayTempHi = parseInt(data.daily.data[0].temperatureHigh) + "°";
@@ -109,65 +111,73 @@
         var dayAfterPressure = data.daily.data[2].pressure;
 
         var weatherCard = "";
-        weatherCard += ("<h5>" + todaySummary + "</h5>");
         weatherCard += ("<h5> Temp: Lo: " + todayTempLo + "/ Hi: " + todayTempHi + "</h5>");
         weatherCard += ("<h5> Humidity: " + todayhumidity + "</h5>");
         weatherCard += ("<h5>Wind Speed: " + todayWind + "</h5>");
         weatherCard += ("<h5> Pressure: " + todayPressure + "</h5>");
+        weatherCard += ("<h5>" + todaySummary + "</h5>");
         $("#todayWeather").append(weatherCard);
 
         var weatherCard2 = "";
-        weatherCard2 += ("<h5>" + tmrwSummary + "</h5>");
         weatherCard2 += ("<h5> Temp: Lo: " + tmrwTempLo + "/ Hi: " + tmrwTempHi + "</h5>");
         weatherCard2 += ("<h5> Humidity: " + tmrwHumidity + "</h5>");
         weatherCard2 += ("<h5>Wind Speed: " + tmrwWind + "</h5>");
         weatherCard2 += ("<h5> Pressure: " + tmrwPressure + "</h5>");
+        weatherCard2 += ("<h5>" + tmrwSummary + "</h5>");
         $("#tmrwWeather").append(weatherCard2);
 
         var weatherCard3 = "";
-        weatherCard3 += ("<h5>" + dayAfterSummary + "</h5>");
         weatherCard3 += ("<h5> Temp: Lo: " + dayAfterTempLo + "/ Hi: " + dayAfterTempHi + "</h5>");
         weatherCard3 += ("<h5> Humidity: " + dayAfterHumidity + "</h5>");
         weatherCard3 += ("<h5>Wind Speed: " + dayAfterWind + "</h5>");
         weatherCard3 += ("<h5> Pressure: " + dayAfterPressure + "</h5>");
+        weatherCard3 += ("<h5>" + dayAfterSummary + "</h5>");
         $("#dayAfterWeather").append(weatherCard3);
 
         console.log(data);
     });
 
-    var weatherType = [
+    var icons = [
         {
-            "summary": "clear-day",
-            "icon": "url('icons/animated/day')"
+            summary: "clear-day",
+            image: "url('../icons/animated/day.svg')"
         },
         {
-            "summary": "clear-night",
+            summary: "clear-night",
+            images: "url('../icons/animated/night.svg')"
 
         },
         {
-            "summary": "rain",
-            "icon": "url('../icons/animated/rainy-4.svg')"
+            summary: "rain",
+            images: "url('../icons/animated/rainy-4.svg')"
         },
         {
-            "summary": "snow",
+            summary: "snow",
+            images: "url('../icons/animated/snowy-4.svg')"
         },
         {
-            "summary": "sleet",
+            summary: "sleet",
+            images: "url('../icons/animated/snowy-7.svg')"
         },
         {
-            "summary": "wind",
+            summary: "wind",
+            images: "url('../icons/windy.jpg')"
         },
         {
-            "summary": "fog",
+            summary: "fog",
+            images: "url('../icons/animated/cloudy.svg')"
         },
         {
-            "summary": "cloudy",
+            summary: "cloudy",
+            images: "(url('../icons/animated/cloudy.svg')"
         },
         {
-            "summary": "partly-cloudy-day",
+            summary: "partly-cloudy-day",
+            images: "url('../icons/animated/cloudy-day-3.svg')"
         },
         {
-            "summary": "partly-cloudy-night",
+            summary: "partly-cloudy-night",
+            images: "url('../icons/animated/cloudy-night-3.svg')"
         }
     ];
 
