touchups to webpage

--- a/My-Webpage.html
+++ b/My-Webpage.html
@@ -45,8 +45,8 @@
             </div>
             <div class="slide">
                 <p>
-                    The ladder half of my contract was in an office working with personnel and minor things on the computer like spreadsheets
-                    and inputting data into a data base for new soldiers and officers who came to the unit. Naturally I took interest in the magic
+                    The ladder half of my contract was in an office working minor things on the computer like spreadsheets
+                    and inputting data into a data base for new personnel. Naturally, I took interest in the magic
                     that happens behind the screens and what made things tick in technology.
                 </p>
             </div>
